--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-navigation-menu": "^1.2.4",
     "@radix-ui/react-select": "^2.1.5",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.5",
     "@react-google-maps/api": "^2.20.6",
     "class-variance-authority": "^0.7.1",
@@ -31,6 +32,7 @@
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "tsparticles-slim": "^2.12.0",
+    "use-places-autocomplete": "^4.0.1",
     "zod": "^3.24.1"
   },
   "devDependencies": {
