--- a/package.json
+++ b/package.json
@@ -32,11 +32,11 @@
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.54.2",
-    "react-particles": "^2.12.2",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.0.0",
     "shadcn-ui": "^0.9.4",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
-    "tsparticles-slim": "^2.12.0",
     "use-places-autocomplete": "^4.0.1",
     "zod": "^3.24.1"
   },
